// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getDisplayDetailsFromFormSubmissionPayment > Bpoint > gets the correct details 1`] = `
{
  "amount": {
    "formatted": "$123.45",
    "value": 123.45,
  },
  "paymentDisplayDetails": [
    {
      "key": "BPOINT_RECEIPT_NUMBER",
      "label": "Receipt Number",
      "value": "receiptNumber",
    },
    {
      "key": "BPOINT_CRN1",
      "label": "CRN 1",
      "value": "crn1",
    },
    {
      "key": "BPOINT_CRN2",
      "label": "CRN 2",
      "value": "crn2",
    },
    {
      "key": "BPOINT_CRN3",
      "label": "CRN 3",
      "value": "crn3",
    },
    {
      "key": "BPOINT_BILLER_CODE",
      "label": "Biller Code",
      "value": "billerCode",
    },
    {
      "key": "BPOINT_CREDIT_CARD_MASK",
      "label": "Card Number",
      "value": "creditCardMask",
    },
    {
      "key": "BPOINT_AMOUNT",
      "label": "Amount",
      "value": "$123.45",
    },
    {
      "key": "BPOINT_SURCHARGE_AMOUNT",
      "label": "Surcharge Amount",
      "value": "$12.34",
    },
    {
      "key": "BPOINT_PROCESSED_DATE_TIME",
      "label": "Processed Date Time",
      "value": "11/09/2024 12:00:00 PM",
    },
  ],
}
`;

exports[`getDisplayDetailsFromFormSubmissionPayment > CP Pay > gets the correct details - v1 1`] = `
{
  "amount": {
    "formatted": "$123.45",
    "value": 123.45,
  },
  "paymentDisplayDetails": [
    {
      "key": "CP_PAY_TRANSACTION_ID",
      "label": "Transaction Id",
      "value": "123",
    },
    {
      "key": "CP_PAY_ORDER_NUMBER",
      "label": "Order Number",
      "value": "orderNumber",
    },
    {
      "key": "CP_PAY_PAYMENT_TYPE",
      "label": "Payment Type",
      "value": "Credit/Debit Card",
    },
    {
      "key": "CP_PAY_CREDIT_CARD_MASK",
      "label": "Card Number",
      "value": "xxxx xxxx xxxx 1234",
    },
    {
      "key": "CP_PAY_AMOUNT",
      "label": "Amount",
      "value": "$123.45",
    },
    {
      "key": "CP_PAY_CREATED_DATE_TIME",
      "label": "Created At",
      "value": "11/09/2024 12:00:00 PM",
    },
  ],
}
`;

exports[`getDisplayDetailsFromFormSubmissionPayment > CP Pay > gets the correct details - v2 1`] = `
{
  "amount": {
    "formatted": "$123.45",
    "value": 123.45,
  },
  "paymentDisplayDetails": [
    {
      "key": "CP_PAY_TRANSACTION_ID",
      "label": "Transaction Id",
      "value": "123",
    },
    {
      "key": "CP_PAY_ORDER_NUMBER",
      "label": "Order Number",
      "value": "externalReferenceId",
    },
    {
      "key": "CP_PAY_PAYMENT_TYPE",
      "label": "Payment Type",
      "value": "CreditDebitCard",
    },
    {
      "key": "CP_PAY_CREDIT_CARD_MASK",
      "label": "Card Number",
      "value": "xxxx xxxx xxxx 1234",
    },
    {
      "key": "CP_PAY_AMOUNT",
      "label": "Amount",
      "value": "$123.45",
    },
    {
      "key": "CP_PAY_CREATED_DATE_TIME",
      "label": "Created At",
      "value": "11/09/2024 12:00:00 PM",
    },
  ],
}
`;

exports[`getDisplayDetailsFromFormSubmissionPayment > NSW Gov Pay > gets the correct details 1`] = `
{
  "amount": {
    "formatted": "$123.45",
    "value": 123.45,
  },
  "paymentDisplayDetails": [
    {
      "key": "NSW_GOV_PAY_COMPLETION_REFERENCE",
      "label": "Completion Reference",
      "value": "111111111111",
    },
    {
      "key": "NSW_GOV_PAY_PAYMENT_REFERENCE",
      "label": "Payment Reference",
      "value": "222222222222",
    },
    {
      "key": "NSW_GOV_PAY_BANK_REFERENCE",
      "label": "Bank Reference",
      "value": "333333333333",
    },
    {
      "key": "NSW_GOV_PAY_PAYMENT_METHOD",
      "label": "Payment Method",
      "value": "CARD",
    },
    {
      "key": "NSW_GOV_PAY_CREDIT_CARD_NUMBER",
      "label": "Card Number",
      "value": "xxxx xxxx xxxx 4242",
    },
    {
      "key": "NSW_GOV_PAY_AMOUNT",
      "label": "Amount",
      "value": "$123.45",
    },
    {
      "key": "NSW_GOV_PAY_SURCHARGE_AMOUNT",
      "label": "Surcharge Amount",
      "value": "$12.34",
    },
    {
      "key": "NSW_GOV_PAY_SURCHARGE_GST",
      "label": "Surcharge GST",
      "value": "$2.34",
    },
    {
      "key": "NSW_GOV_PAY_CREATED_DATE_TIME",
      "label": "Created Date Time",
      "value": "11/09/2024 12:00:00 PM",
    },
  ],
}
`;

exports[`getDisplayDetailsFromFormSubmissionPayment > Westpac > gets the correct details 1`] = `
{
  "amount": {
    "formatted": "$123.45",
    "value": 123.45,
  },
  "paymentDisplayDetails": [
    {
      "key": "WESTPAC_QUICK_STREAM_RECEIPT_NUMBER",
      "label": "Receipt Number",
      "value": "receiptNumber",
    },
    {
      "key": "WESTPAC_QUICK_STREAM_PAYMENT_REFERENCE_NUMBER",
      "label": "Payment Reference",
      "value": "paymentReferenceNumber",
    },
    {
      "key": "WESTPAC_QUICK_STREAM_CUSTOMER_REFERENCE_NUMBER",
      "label": "Customer Reference Number",
      "value": "customerReferenceNumber",
    },
    {
      "key": "WESTPAC_QUICK_STREAM_AMOUNT",
      "label": "Amount",
      "value": "$123.45",
    },
    {
      "key": "WESTPAC_QUICK_STREAM_SURCHARGE_AMOUNT",
      "label": "Surcharge Amount",
      "value": "$12.34",
    },
    {
      "key": "WESTPAC_QUICK_STREAM_SETTLEMENT_DATE",
      "label": "Settlement Date",
      "value": "11/09/2024",
    },
  ],
}
`;
